--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,13 @@ body {
 }
 
 section {
-
-    display: none;
-    position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100% !important;
     background: #fff;
+}
+
+.footer {
+    display: block;
 }
 
 nav {
@@ -47,6 +48,7 @@ section:target {
     color: white;
 }
 
+
 .bg-darkblue {
     background-color: #032541;
 }
@@ -73,6 +75,7 @@ img {
 }
 
 /*  end of Header */
+
 /*  start of home page */
 
 :root {
@@ -496,8 +499,85 @@ a {
     color: palegreen;
 }
 
+html {
+    overflow-y: scroll;
+}
 
 /*  end of homepage*/
+/* start of footer */
 
+.footer-section {
+    background-color: #032541;
+    color: aliceblue;
+    height: auto;
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 25px;
+    text-align: center;
+    margin: 0 auto;
+
+
+}
+
+p {
+    padding: 15px;
+    text-align: center;
+}
+
+img {
+    width: 120px;
+    height: 120px;
+    padding: 5px;
+}
+
+button {
+    padding: 10px;
+    background-color: aliceblue;
+    color: black;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    border-radius: 5px;
+    text-align: center;
+
+}
+
+h5 {
+    margin: 5px;
+    padding: 5px;
+    font-weight: 700;
+}
+
+ul {
+    margin: 15px;
+    padding: 5px;
+
+}
+
+li {
+    list-style: none;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.copy-right {
+    align-items: center;
+}
+
+@media (max-width: 400px) {
+    .join-comuntiy {
+        display: block;
+    }
+}
+
+@media (max-width: 600px) {
+    .join-comuntiy {
+        display: block;
+        margin: 0 auto;
+    }
+
+}
+
+/*end of footer*/
 
 
